// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Controls> reply + reply-all = reply-all 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
>
  <SimpleControl
    action="reply-all"
    index={1}
    key="2"
  />
</div>
`;

exports[`<Controls> reply-all + reply = reply 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
>
  <SimpleControl
    action="reply"
    index={1}
    key="2"
  />
</div>
`;

exports[`<Controls> works with all controls 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
>
  <SimpleControl
    action="more"
    index={0}
    key="1"
  />
  <SimpleControl
    action="reply-all"
    index={2}
    key="3"
  />
  <SimpleControl
    action="trash"
    index={3}
    key="4"
  />
  <SimpleControl
    action="compose"
    index={4}
    key="5"
  />
</div>
`;

exports[`<Controls> works with compose control 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
>
  <SimpleControl
    action="compose"
    index={0}
    key="1"
  />
</div>
`;

exports[`<Controls> works with more control 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
>
  <SimpleControl
    action="more"
    index={0}
    key="1"
  />
</div>
`;

exports[`<Controls> works with non-existing control 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
>
  <SimpleControl
    action="foo"
    index={0}
    key="1"
  />
  <SimpleControl
    action="bar"
    index={1}
    key="2"
  />
  <SimpleControl
    action="more"
    index={2}
    key="3"
  />
  <SimpleControl
    action="reply"
    index={3}
    key="4"
  />
</div>
`;

exports[`<Controls> works with reply control 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
>
  <SimpleControl
    action="reply"
    index={0}
    key="1"
  />
</div>
`;

exports[`<Controls> works with reply-all control 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
>
  <SimpleControl
    action="reply-all"
    index={0}
    key="1"
  />
</div>
`;

exports[`<Controls> works with trash control 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
>
  <SimpleControl
    action="trash"
    index={0}
    key="1"
  />
</div>
`;

exports[`<Controls> works without props 1`] = `
<div
  aria-label="YOAI_ReactMessageHeaderControls"
  className="message-head__controls"
/>
`;
